--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/utils/supabase/supaBaseClientConfig.ts", "src/app/(private)/features/handleForms/utils/actions"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/utils/supabase/supaBaseClientConfig.ts", "src/app/(private)/features/handleForms/utils/actions", "src/app/(private)/(other)/components/analytics/ProfitGraph.jsx"],
   "exclude": ["node_modules"]
 }
